bpo-36254: Fix invalid uses of %d in format strings in C.